<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:custom="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  android:paddingBottom="@dimen/activity_vertical_margin"
  tools:context=".activity.AddComicActivity">

  <com.mike.comicreeder.components.FloatingLabelEditText
    android:id="@+id/comicName"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    custom:editTextHint="@string/hint_comic_name" />

  <com.mike.comicreeder.components.FloatingLabelEditText
    android:id="@+id/writer"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    custom:editTextHint="@string/hint_writer" />

  <com.mike.comicreeder.components.FloatingLabelEditText
    android:id="@+id/issueNum"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    custom:editTextHint="@string/hint_issue_num" />

  <com.mike.comicreeder.components.FloatingLabelEditText
    android:id="@+id/publisher"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    custom:editTextHint="@string/hint_publisher" />

  <Button
    android:id="@+id/add_comic_button"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:layout_marginTop="10dp"
    android:text="@string/add_comic"
    android:onClick="addComic" />
</LinearLayout>
