<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".SearchFromComicsActivity">

    <TextView
        android:id="@+id/search_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_criteria"
        android:textSize="20dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/comicSearchFloatingLabel"
        style="@style/FloatingLabel"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/comicNameSearch"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/search_label"
        android:inputType="text"
        android:hint="@string/hint_comic_name" />

    <TextView
        android:id="@+id/writerSearchFloatingLabel"
        style="@style/FloatingLabel"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/writerSearch"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/comicNameSearch"
        android:inputType="text"
        android:hint="@string/hint_writer" />

    <TextView
        android:id="@+id/publisherSearchFloatingLabel"
        style="@style/FloatingLabel"/>
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/publisherSearch"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/writerSearch"
        android:inputType="text"
        android:hint="@string/hint_publisher" />

    <Button
        android:id="@+id/search_button"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/publisherSearch"
        android:text="@string/search_for_comics"
        android:onClick="searchForComics" />
</LinearLayout>
